--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<button id="btn">Click me</button>
 </body>
 </html>
