--- a/sunday-17-00/index.html
+++ b/sunday-17-00/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="script.js"></script>
+    <script src="random_lesson.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
