--- a/sunday-17-00/minesweeper/index.html
+++ b/sunday-17-00/minesweeper/index.html
@@ -13,5 +13,9 @@
 <body>
     
     <div id="board"></div>
+    <input type="number" value="10" id="number_of_rows"/> 
+    <input type="number" value="10" id="number_of_colons"/>
+    <input type="number" value="10" id="number_of_mines"/>
+
 </body>
 </html>
