--- a/sunday-17-00/minesweeper/index.html
+++ b/sunday-17-00/minesweeper/index.html
@@ -13,9 +13,13 @@
 <body>
     
     <div id="board"></div>
-    <input type="number" value="10" id="number_of_rows"/> 
-    <input type="number" value="10" id="number_of_colons"/>
-    <input type="number" value="10" id="number_of_mines"/>
+    <label for="number_of_rows">Rows: </label>
+    <input type="number" value="10" id="number_of_rows"/><br />
+    <label for="number_of_columns">Columns: </label>
+    <input type="number" value="10" id="number_of_columns"/><br />
+    <label for="number_of_colons">Mines: </label>
+    <input type="number" value="10" id="number_of_mines"/><br />
 
+    
 </body>
 </html>
